--- a/JBS_C/JBS_C_A/index.html
+++ b/JBS_C/JBS_C_A/index.html
@@ -69,6 +69,9 @@ a:hover {color: #0000ff;}
 <a href=/biblestudy/JBS_C/JBS_C_A/V14T_2CH.doc.html>歷代志下分章大要</a>
 </td></tr>
 <tr><td align=left>
+<a href=/biblestudy/JBS_C/JBS_C_A/V15T_2CH.doc.html>以斯拉記分章大要</a>
+</td></tr>
+<tr><td align=left>
 <a href=/biblestudy/JBS_C/JBS_C_A/V16T_NEH.doc.html>尼希米記分章大要</a>
 </td></tr>
 <tr><td align=left>
