--- a/JBS_A/JA_10.doc.html
+++ b/JBS_A/JA_10.doc.html
@@ -2390,7 +2390,7 @@ name.</i></p>
 <tr>
 <td bgcolor="white" width="26.09%" rowspan="1" colspan="1">
 <div name="ä¸è¬æå­" class="c16">
-<p class="c17">以弗所書</p>
+<p class="c17">腓立比書</p>
 </div>
 </td>
 <td bgcolor="white" width="23.91%" rowspan="1" colspan="1">
