--- a/JBS_D/BIB_VA/V27M_DAN/V27_DAN-001M.doc.html
+++ b/JBS_D/BIB_VA/V27M_DAN/V27_DAN-001M.doc.html
@@ -893,7 +893,7 @@ the end thereof they might stand before the king.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:6（KJV）</b></span>Now
-among these were of the children of Judah, Daniel iel, Hananiah,
+among these were of the children of Judah, Daniel, Hananiah,
 Mishael, and Azariah:</p>
 </div>
 </td>
@@ -922,7 +922,7 @@ Mishael, of Meshach; and to Azariah, of Abednego.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:8（KJV）</b></span>But
-Daniel iel purposed in his heart that he would not defile himself
+Daniel purposed in his heart that he would not defile himself
 with the portion of the king's meat, nor with the wine which he
 drank: therefore he requested of the prince of the eunuchs that he
 might not defile himself.</p>
@@ -938,7 +938,7 @@ might not defile himself.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:9（KJV）</b></span>Now
-God had brought Daniel iel into favour and tender love with the
+God had brought Daniel into favour and tender love with the
 prince of the eunuchs.</p>
 </div>
 </td>
@@ -952,7 +952,7 @@ prince of the eunuchs.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:10（KJV）</b></span>And
-the prince of the eunuchs said unto Daniel iel, I fear my lord the
+the prince of the eunuchs said unto Daniel, I fear my lord the
 king, who hath appointed your meat and your drink: for why should
 he see your faces worse liking than the children which are of your
 sort? then shall ye make me enDaniel ger my head to the king.</p>
@@ -968,8 +968,8 @@ sort? then shall ye make me enDaniel ger my head to the king.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:11（KJV）</b></span>Then
-said Daniel iel to Melzar, whom the prince of the eunuchs had set
-over Daniel iel, Hananiah, Mishael, and Azariah,</p>
+said Daniel to Melzar, whom the prince of the eunuchs had set
+over Daniel, Hananiah, Mishael, and Azariah,</p>
 </div>
 </td>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
@@ -1054,7 +1054,7 @@ should drink; and gave them pulse.</p>
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:17（KJV）</b></span>As
 for these four children, God gave them knowledge and skill in all
-learning and wisdom: and Daniel iel had understanding in all
+learning and wisdom: and Daniel had understanding in all
 visions and dreams.</p>
 </div>
 </td>
@@ -1084,7 +1084,7 @@ Nebuchadnezzar.</p>
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:19（KJV）</b></span>And
 the king communed with them; and among them all was found none like
-Daniel iel, Hananiah, Mishael, and Azariah: therefore stood they
+Daniel, Hananiah, Mishael, and Azariah: therefore stood they
 before the king.</p>
 </div>
 </td>
@@ -1114,7 +1114,7 @@ all his realm.</p>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
 <div name="å§æ" class="c13">
 <p class="c12"><span class="c8"><b>Daniel 1:21（KJV）</b></span>And
-Daniel iel continued even unto the first year of king Cyrus.</p>
+Daniel continued even unto the first year of king Cyrus.</p>
 </div>
 </td>
 <td bgcolor="white" width="50.00%" rowspan="1" colspan="1">
